working on owl carousel

--- a/public/index.html
+++ b/public/index.html
@@ -37,9 +37,9 @@
 
     <script src="%PUBLIC_URL%/js/jquery-2.2.4.min.js"></script>
     <!-- Popper js -->
-    <script src="%PUBLIC_URL%/js/popper.min.js"></script>
+    <script src="%PUBLIC_URL%/js/popper.js"></script>
     <!-- Bootstrap js -->
-    <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
+    <script src="%PUBLIC_URL%/js/bootstrap.js"></script>
     <!-- All Plugins js -->
     <script src="%PUBLIC_URL%/js/plugins.js"></script>
     <!-- Active js -->
