--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <script src="%PUBLIC_URL%/js/jquery-2.2.4.min.js"></script>
+    <script src="%PUBLIC_URL%/js/jquery.js"></script>
     <!-- Popper js -->
     <script src="%PUBLIC_URL%/js/popper.js"></script>
     <!-- Bootstrap js -->
@@ -44,5 +44,11 @@
     <script src="%PUBLIC_URL%/js/plugins.js"></script>
     <!-- Active js -->
     <script src="%PUBLIC_URL%/js/active.js"></script>
+    <script src="%PUBLIC_URL%/js/owl.carousel.js"></script>
+    <script>
+      $(document).ready(function() {
+        $("owl-example").owlCarousel();
+      })
+    </script>
   </body>
 </html>
